Issue #11603: Fix a crash when __str__ is rebound as __repr__. Patch by Andreas Stührk.